build to railway

--- a/package.json
+++ b/package.json
@@ -82,5 +82,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "22.17.1"
   }
 }
